reconstruction:   1. 将主流程的消息流转重构为总线型，支持所有订阅某一chatsessionId，针对所有涉及到直接生成的动作：append，replace，edit user，都会在所有连接中显示。   2. 支持断线重连，当消息正在传输，关闭ws后，可重新通过选择会话进入传输状态